--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
-.jumbotron {
+.jumbotron { <link rel="stylesheet" type="text/css" href="css/styles.css">
     padding:70px 30px 70px 30px;
     margin:0px auto;
     background: #9575CD ;
