--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,8 @@ body {
 
 .carousel {
   background: #512DA8; }
-
   .carousel .carousel-item {
     height: 300px; }
-    
     .carousel .carousel-item img {
       position: absolute;
       top: 0;
@@ -54,3 +52,15 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-header {
+  background: #512DA8;
+  color: floralwhite; }
+  .modal-header button {
+    color: floralwhite; }
+
+.modal-body {
+  background: #D1C4E9; }
+
+.modal-footer {
+  background: #9575CD; }
